Cleanup: make Nebula facet sourcesets extend from tests to eliminate manual duplication.